NEXT-631: add Thumbnail entity
thumbnail entity is necessary if thumbnail configuration works per
sales channel or per album or whatever
to avoid the pain of migrating we add it now

--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -10,7 +10,7 @@
             <template v-else-if="checkForFileTypeVideo">
                 {% block sw_media_preview_file_type_video %}
                     <video controls class="sw-media-preview-item">
-                        <source :src="item.extensions.links.url" :type="item.mimeType">
+                        <source :src="item.url" :type="item.mimeType">
                         {{ $tc('global.sw-media-preview.fallbackVideoTagSupport') }}
                     </video>
                 {% endblock %}
@@ -19,7 +19,7 @@
             <template v-else-if="checkForFileTypeAudio">
                 {% block sw_media_preview_file_type_audio %}
                     <audio controls>
-                        <source :src="item.extensions.links.url" :type="item.mimeType">
+                        <source :src="item.url" :type="item.mimeType">
                         {{ $tc('global.sw-media-preview.fallbackAudioTagSupport') }}
                     </audio>
                 {% endblock %}
