--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -23,7 +23,7 @@
 
                                 {% block sw_media_quickinfo_quickactions_download %}
                                     <a class="sw-media-quickinfo__quickaction"
-                                       :href="this.item.extensions.links.url"
+                                       :href="this.item.url"
                                        download>
                                         <sw-icon small
                                                  name="default-action-cloud-download"
