--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-list/sw-settings-country-list.html.twig
@@ -40,14 +40,19 @@
                 {% block sw_settings_country_list_content_card %}
                     <sw-card :isLoading="isLoading">
                         {% block sw_settings_country_list_grid %}
-                            <sw-grid slot="grid" class="sw-settings-country-list-grid" :items="countrys" table>
+                            <sw-grid slot="grid"
+                                     class="sw-settings-country-list-grid"
+                                     :selectable="false"
+                                     :items="countrys"
+                                     @inline-edit-finish="onInlineEditSave"
+                                     table>
                                 <template slot="columns" slot-scope="{ item }">
                                     {% block sw_product_list_grid_columns %}
 
                                         {% block sw_settings_country_list_columns_name %}
                                             <sw-grid-column flex="minmax(180px, 2fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-country.list.columnName')">
-
                                                 {% block sw_settings_country_list_columns_name_link %}
                                                     <router-link :title="$tc('sw-settings-country.list.contextMenuEdit')"
                                                                  :to="{ name: 'sw.settings.country.detail', params: { id: item.id } }">
@@ -56,15 +61,28 @@
                                                         {% endblock %}
                                                     </router-link>
                                                 {% endblock %}
+
+                                                {% block sw_settings_country_list_columns_name_editor %}
+                                                    <sw-field type="text" v-model="item.name" slot="inline-edit"></sw-field>
+                                                {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_settings_country_list_columns_active %}
                                             <sw-grid-column flex="minmax(100px, 1fr)"
+                                                            editable
+                                                            align="center"
                                                             :label="$tc('sw-settings-country.list.columnActive')">
                                                 {% block sw_settings_country_list_columns_active_label %}
                                                     <sw-icon name="small-default-checkmark-line-medium" small v-if="item.active" class="is--active"></sw-icon>
                                                     <sw-icon name="small-default-x-line-medium" small v-else class="is--inactive"></sw-icon>
+                                                {% endblock %}
+
+                                                {% block sw_settings_country_list_columns_active_editor %}
+                                                    <sw-field type="checkbox"
+                                                              v-model="item.active"
+                                                              slot="inline-edit">
+                                                    </sw-field>
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
@@ -72,8 +90,7 @@
                                         {% block sw_settings_country_list_columns_actions %}
                                             <sw-grid-column flex="minmax(70px, 70px)"
                                                             align="center"
-                                                            label=""
-                                                            iconLabel="small-search">
+                                                            label="">
                                                 <sw-context-button>
 
                                                     {% block sw_settings_country_list_columns_actions_edit %}
