--- a/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/page/sw-settings-currency-list/sw-settings-currency-list.html.twig
@@ -40,12 +40,18 @@
                 {% block sw_settings_currency_list_content_card %}
                     <sw-card :isLoading="isLoading">
                         {% block sw_settings_currency_list_grid %}
-                            <sw-grid slot="grid" class="sw-settings-currency-list-grid" :items="currencies" table>
+                            <sw-grid slot="grid"
+                                     class="sw-settings-currency-list-grid"
+                                     :selectable="false"
+                                     :items="currencies"
+                                     @inline-edit-finish="onInlineEditSave"
+                                     table>
                                 <template slot="columns" slot-scope="{ item }">
                                     {% block sw_product_list_grid_columns %}
 
                                         {% block sw_settings_currency_list_columns_name %}
                                             <sw-grid-column flex="minmax(180px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-currency.list.columnName')">
 
                                                 {% block sw_settings_currency_list_columns_name_link %}
@@ -56,32 +62,51 @@
                                                         {% endblock %}
                                                     </router-link>
                                                 {% endblock %}
+
+                                                {% block sw_settings_currency_list_grid_columns_name_editor %}
+                                                    <sw-field type="text" v-model="item.name" slot="inline-edit"></sw-field>
+                                                {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_settings_currency_list_columns_short_name %}
                                             <sw-grid-column flex="minmax(180px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-currency.list.columnShortName')">
                                                 {% block sw_settings_currency_list_columns_short_name_label %}
                                                     {{ item.shortName }}
+                                                {% endblock %}
+
+                                                {% block sw_settings_currency_list_grid_columns_shortname_editor %}
+                                                    <sw-field type="text" v-model="item.shortName" slot="inline-edit"></sw-field>
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_settings_currency_list_columns_symbol %}
                                             <sw-grid-column flex="minmax(80px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-currency.list.columnSymbol')">
                                                 {% block sw_settings_currency_list_columns_symbol_label %}
                                                     {{ item.symbol }}
+                                                {% endblock %}
+
+                                                {% block sw_settings_currency_list_grid_columns_symbol_editor %}
+                                                    <sw-field type="text" v-model="item.symbol" slot="inline-edit"></sw-field>
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_settings_currency_list_columns_factor %}
                                             <sw-grid-column flex="minmax(80px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-currency.list.columnFactor')">
                                                 {% block sw_settings_currency_list_columns_factor_label %}
                                                     {{ item.factor }}
+                                                {% endblock %}
+
+                                                {% block sw_settings_currency_list_grid_columns_factor_editor %}
+                                                    <sw-field type="number" v-model="item.factor" slot="inline-edit"></sw-field>
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
@@ -89,8 +114,7 @@
                                         {% block sw_settings_currency_list_columns_actions %}
                                             <sw-grid-column flex="minmax(70px, 70px)"
                                                             align="center"
-                                                            label=""
-                                                            iconLabel="small-search">
+                                                            label="">
                                                 <sw-context-button>
 
                                                     {% block sw_settings_currency_list_columns_actions_edit %}
