--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-list/sw-settings-tax-list.html.twig
@@ -40,12 +40,18 @@
                 {% block sw_settings_tax_list_content_card %}
                     <sw-card :isLoading="isLoading">
                         {% block sw_settings_tax_list_grid %}
-                            <sw-grid slot="grid" class="sw-settings-tax-list-grid" :items="taxes" table>
+                            <sw-grid slot="grid"
+                                     class="sw-settings-tax-list-grid"
+                                     :selectable="false"
+                                     :items="taxes"
+                                     @inline-edit-finish="onInlineEditSave"
+                                     table>
                                 <template slot="columns" slot-scope="{ item }">
                                     {% block sw_product_list_grid_columns %}
 
                                         {% block sw_settings_tax_list_columns_name %}
                                             <sw-grid-column flex="minmax(180px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-tax.list.columnName')">
 
                                                 {% block sw_settings_tax_list_columns_name_link %}
@@ -56,14 +62,30 @@
                                                         {% endblock %}
                                                     </router-link>
                                                 {% endblock %}
+
+                                                {% block sw_settings_tax_list_columns_name_editor %}
+                                                    <sw-field type="text"
+                                                              v-model="item.name"
+                                                              slot="inline-edit">
+                                                    </sw-field>
+                                                {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_settings_tax_list_columns_tax_rate %}
                                             <sw-grid-column flex="minmax(180px, 1fr)"
+                                                            editable
                                                             :label="$tc('sw-settings-tax.list.columnTaxRate')">
                                                 {% block sw_settings_tax_list_columns_short_tax_rate_label %}
-                                                    {{ item.taxRate }}
+                                                    {{ item.taxRate }} <span v-html="$tc('sw-settings-tax.general.taxRateSymbol')"></span>
+                                                {% endblock %}
+
+                                                {% block sw_settings_tax_list_columns_taxrate_editor %}
+                                                    <sw-field type="number"
+                                                              suffix="%"
+                                                              v-model="item.taxRate"
+                                                              slot="inline-edit">
+                                                    </sw-field>
                                                 {% endblock %}
                                             </sw-grid-column>
                                         {% endblock %}
@@ -71,8 +93,7 @@
                                         {% block sw_settings_tax_list_columns_actions %}
                                             <sw-grid-column flex="minmax(70px, 70px)"
                                                             align="center"
-                                                            label=""
-                                                            iconLabel="small-search">
+                                                            label="">
                                                 <sw-context-button>
 
                                                     {% block sw_settings_tax_list_columns_actions_edit %}
